--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "vonage/client": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
